# django_vipcontacts

./: .gitignore  README.md  django_vipcontacts.epj  manage.py  probe_person_rest.py  pyproject.toml  searching_sql.py  update_reusing.py
django_vipcontacts/: asgi.py  settings.py  urls.py  wsgi.py
doc/: Doxyfile  ENTITY_RELATIONSHIP.md
vipcontacts/: __init__.py  apps.py  commons.py  forms.py  hardcoded_strings.py  models.py  poethepoet.py  serializers.py  tests.py  vcard.py  views.py
vipcontacts/fixtures/: test_server.json
vipcontacts/migrations/: 0001_initial.py  0002_alter_relationship_retypes.py  0002_auto_20210401_0615.py  0002_auto_20210402_1425.py  0002_auto_20210408_1714.py  0002_remove_person_alias.py  0003_alter_address_code.py  0003_auto_20210330_1005.py  0003_auto_20210402_1428.py  0003_auto_20210409_0630.py  0004_auto_20210402_1510.py  0004_job.py  0004_search_chips.py  0005_alter_relationship_retypes.py  0005_auto_20210402_1526.py  0005_group.py  0006_alter_relationship_retypes.py  0006_auto_20210402_1536.py  0006_auto_20210417_0558.py  0007_blob.py  0007_delete_relationship.py  0008_auto_20210427_1635.py  0008_relationship.py  0009_alter_blob_mime_alter_log_person_alter_phone_retypes.py  0009_auto_20210402_1617.py  0010_alter_log_person.py  0010_auto_20210402_1624.py  0011_alter_address_country_alter_log_retypes_and_more.py  0011_auto_20210402_1628.py  0012_alter_search_person.py  0012_auto_20210402_1953.py  0013_auto_20210403_0845.py  0014_auto_20210403_1505.py
vipcontacts/reusing/: casts.py  listdict_functions.py
(+9 files in other folders)
